    - tweak fix-dimensions: fixes subtracting small amounts from stacked liquids etc.
    - tweak advmode-contained: fixes UI bug in custom reactions with container inputs in advmode.
  New scripts:
    - fixnaked: removes thoughts about nakedness.
    - setfps: set FPS cap at runtime, in case you want slow motion or speed-up.
    - fix/population-cap: run after every migrant wave to prevent exceeding the cap.
    - fix/stable-temp: counts items with temperature updates; does instant one-shot stable-temp.
  New GUI scripts:
    - gui/mechanisms: browse mechanism links of the current building.
    - gui/room-list: browse other rooms owned by the unit when assigning one.
    - gui/liquids: a GUI front-end for the liquids plugin.
    - gui/rename: renaming stockpiles, workshops and units via an in-game dialog.
    - gui/power-meter: front-end for the Power Meter plugin.
    - gui/siege-engine: front-end for the Siege Engine plugin.
  Autolabor plugin:
    - can set nonidle hauler percentage.
    - broker excluded from all labors when needed at depot.
    - likewise, anybody with a scheduled diplomat meeting.
  New Dwarf Manipulator plugin:
    Open the unit list, and press 'l' to access a Dwarf Therapist like UI in the game.
  New Steam Engine plugin:
    Dwarven Water Reactors don't make any sense whatsoever and cause lag, so this may be
    a replacement for those concerned by it. The plugin detects if a workshop with a
    certain name is in the raws used by the current world, and provides the necessary
    behavior. See hack/raw/*_steam_engine.txt for the necessary raw definitions.
    Note: Stuff like animal treadmills might be more period, but absolutely can't be
    done with tools dfhack has access to.
  New Power Meter plugin:
    When activated, implements a pressure plate modification that detects power in gear
    boxes built on the four adjacent N/S/W/E tiles. The gui/power-meter script implements
    the necessary build configuration UI.